Fixed search-page flickering
* This is just a temporary workaround

--- a/src/components/virtualized/virtuoso.scss
+++ b/src/components/virtualized/virtuoso.scss
@@ -1,9 +1,7 @@
 #search-page {
 	.virtuoso-grid-list {
-		text-align: center;
-
-		.virtuoso-grid-item {
-			display: inline-block;
-		}
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
 	}
 }
